Semester_212/CO3005/Assignment 1/src/main/d96/parser/.antlr/D96Parser.py
# Generated from /home/thanh792001/Computer-Science---HCMUT/Semester_212/CO3005/Assignment 1/src/main/d96/parser/D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Self'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'==.'", "'+.'", "'::'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'..'", "'.'", "','", "';'", "':'", 
                     "'\"'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_COMMENT", "LITERAL", "INT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STR_LIT", "DIGIT", "PRIMITIVE_TYPE", 
                      "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", 
                      "TRUE", "FALSE", "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", 
                      "STRING", "RETURN", "NULL", "CLASS", "VAL", "VAR", 
                      "SELF", "CONSTRUCTOR", "DESTRUCTOR", "NEW", "BY", 
                      "ADD", "SUB", "MUL", "DIV", "PRCNT", "NOT", "AND", 
                      "OR", "EQ", "ASSIGN", "NOT_EQ", "LESS", "LESS_EQ", 
                      "GREAT", "GREAT_EQ", "EQ_STR", "CONCAT_STR", "STATIC_ACC", 
                      "LB", "RB", "LP", "RP", "LSB", "RSB", "DOTDOT", "DOT", 
                      "CM", "SEMI", "CL", "DOUBLEQUOTE", "ID", "STATIC_ID", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_start = 0
    RULE_program = 1
    RULE_class_decl = 2
    RULE_mem_list = 3
    RULE_attri_decl = 4
    RULE_attri_body = 5
    RULE_attri_recurse = 6
    RULE_id_list = 7
    RULE_method_decl = 8
    RULE_param_list = 9
    RULE_expr = 10
    RULE_idx_expr = 11
    RULE_expr_list = 12
    RULE_func_call = 13
    RULE_stmt = 14
    RULE_varval_const_stmt = 15
    RULE_const_body = 16
    RULE_const_recurse = 17
    RULE_assign_stmt = 18
    RULE_if_stmt = 19
    RULE_for_in_stmt = 20
    RULE_break_stmt = 21
    RULE_cont_stmt = 22
    RULE_rtrn_stmt = 23
    RULE_method_invoc_stmt = 24
    RULE_block_stmt = 25
    RULE_idx_arr = 26
    RULE_mul_dim_arr = 27
    RULE_data_type = 28
    RULE_array_type = 29

    ruleNames =  [ "start", "program", "class_decl", "mem_list", "attri_decl", 
                   "attri_body", "attri_recurse", "id_list", "method_decl", 
                   "param_list", "expr", "idx_expr", "expr_list", "func_call", 
                   "stmt", "varval_const_stmt", "const_body", "const_recurse", 
                   "assign_stmt", "if_stmt", "for_in_stmt", "break_stmt", 
                   "cont_stmt", "rtrn_stmt", "method_invoc_stmt", "block_stmt", 
                   "idx_arr", "mul_dim_arr", "data_type", "array_type" ]

    EOF = Token.EOF
    BLOCK_COMMENT=1
    LITERAL=2
    INT_LIT=3
    FLOAT_LIT=4
    BOOL_LIT=5
    STR_LIT=6
    DIGIT=7
    PRIMITIVE_TYPE=8
    BREAK=9
    CONTINUE=10
    IF=11
    ELSEIF=12
    ELSE=13
    FOREACH=14
    TRUE=15
    FALSE=16
    ARRAY=17
    IN=18
    INT=19
    FLOAT=20
    BOOLEAN=21
    STRING=22
    RETURN=23
    NULL=24
    CLASS=25
    VAL=26
    VAR=27
    SELF=28
    CONSTRUCTOR=29
    DESTRUCTOR=30
    NEW=31
    BY=32
    ADD=33
    SUB=34
    MUL=35
    DIV=36
    PRCNT=37
    NOT=38
    AND=39
    OR=40
    EQ=41
    ASSIGN=42
    NOT_EQ=43
    LESS=44
    LESS_EQ=45
    GREAT=46
    GREAT_EQ=47
    EQ_STR=48
    CONCAT_STR=49
    STATIC_ACC=50
    LB=51
    RB=52
    LP=53
    RP=54
    LSB=55
    RSB=56
    DOTDOT=57
    DOT=58
    CM=59
    SEMI=60
    CL=61
    DOUBLEQUOTE=62
    ID=63
    STATIC_ID=64
    WS=65
    ERROR_CHAR=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(D96Parser.ProgramContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_start




    def start(self):

        localctx = D96Parser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.program()
            self.state = 61
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.class_decl()
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 68
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def mem_list(self):
            return self.getTypedRuleContext(D96Parser.Mem_listContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_decl




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(D96Parser.CLASS)
            self.state = 71
            self.match(D96Parser.ID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.CL:
                self.state = 72
                self.match(D96Parser.CL)
                self.state = 73
                self.match(D96Parser.ID)


            self.state = 76
            self.match(D96Parser.LP)
            self.state = 77
            self.mem_list()
            self.state = 78
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mem_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attri_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Attri_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Attri_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Method_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Method_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_mem_list




    def mem_list(self):

        localctx = D96Parser.Mem_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mem_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 26)) & ~0x3f) == 0 and ((1 << (_la - 26)) & ((1 << (D96Parser.VAL - 26)) | (1 << (D96Parser.VAR - 26)) | (1 << (D96Parser.CONSTRUCTOR - 26)) | (1 << (D96Parser.DESTRUCTOR - 26)) | (1 << (D96Parser.ID - 26)) | (1 << (D96Parser.STATIC_ID - 26)))) != 0):
                self.state = 82
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL, D96Parser.VAR]:
                    self.state = 80
                    self.attri_decl()
                    pass
                elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.STATIC_ID]:
                    self.state = 81
                    self.method_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attri_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attri_body(self):
            return self.getTypedRuleContext(D96Parser.Attri_bodyContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attri_decl




    def attri_decl(self):

        localctx = D96Parser.Attri_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attri_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 88
            self.attri_body()
            self.state = 89
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attri_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def attri_recurse(self):
            return self.getTypedRuleContext(D96Parser.Attri_recurseContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attri_body




    def attri_body(self):

        localctx = D96Parser.Attri_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attri_body)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.id_list()
                self.state = 92
                self.match(D96Parser.CL)
                self.state = 93
                self.data_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.attri_recurse()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attri_recurseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def attri_recurse(self):
            return self.getTypedRuleContext(D96Parser.Attri_recurseContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def STATIC_ID(self):
            return self.getToken(D96Parser.STATIC_ID, 0)

        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attri_recurse




    def attri_recurse(self):

        localctx = D96Parser.Attri_recurseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attri_recurse)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.STATIC_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                self.match(D96Parser.CM)
                self.state = 100
                self.attri_recurse()
                self.state = 101
                self.match(D96Parser.CM)
                self.state = 102
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.STATIC_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 105
                self.match(D96Parser.CL)
                self.state = 106
                self.data_type()
                self.state = 107
                self.match(D96Parser.ASSIGN)
                self.state = 108
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def STATIC_ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.STATIC_ID)
            else:
                return self.getToken(D96Parser.STATIC_ID, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def getRuleIndex(self):
            return D96Parser.RULE_id_list




    def id_list(self):

        localctx = D96Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.STATIC_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.CM:
                self.state = 113
                self.match(D96Parser.CM)
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.STATIC_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def STATIC_ID(self):
            return self.getToken(D96Parser.STATIC_ID, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_method_decl




    def method_decl(self):

        localctx = D96Parser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.STATIC_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 121
                self.match(D96Parser.LB)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID or _la==D96Parser.STATIC_ID:
                    self.state = 122
                    self.param_list()


                self.state = 125
                self.match(D96Parser.RB)
                self.state = 126
                self.block_stmt()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 128
                self.match(D96Parser.LB)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID or _la==D96Parser.STATIC_ID:
                    self.state = 129
                    self.param_list()


                self.state = 132
                self.match(D96Parser.RB)
                self.state = 133
                self.block_stmt()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(D96Parser.DESTRUCTOR)
                self.state = 135
                self.match(D96Parser.LB)
                self.state = 136
                self.match(D96Parser.RB)
                self.state = 137
                self.block_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Id_listContext)
            else:
                return self.getTypedRuleContext(D96Parser.Id_listContext,i)


        def CL(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CL)
            else:
                return self.getToken(D96Parser.CL, i)

        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Data_typeContext)
            else:
                return self.getTypedRuleContext(D96Parser.Data_typeContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_param_list




    def param_list(self):

        localctx = D96Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.id_list()
            self.state = 141
            self.match(D96Parser.CL)
            self.state = 142
            self.data_type()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 143
                self.match(D96Parser.SEMI)
                self.state = 144
                self.id_list()
                self.state = 145
                self.match(D96Parser.CL)
                self.state = 146
                self.data_type()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(D96Parser.LITERAL, 0)

        def idx_arr(self):
            return self.getTypedRuleContext(D96Parser.Idx_arrContext,0)


        def mul_dim_arr(self):
            return self.getTypedRuleContext(D96Parser.Mul_dim_arrContext,0)


        def SELF(self):
            return self.getToken(D96Parser.SELF, 0)

        def NULL(self):
            return self.getToken(D96Parser.NULL, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def func_call(self):
            return self.getTypedRuleContext(D96Parser.Func_callContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExprContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExprContext,i)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def NEW(self):
            return self.getToken(D96Parser.NEW, 0)

        def expr_list(self):
            return self.getTypedRuleContext(D96Parser.Expr_listContext,0)


        def STATIC_ACC(self):
            return self.getToken(D96Parser.STATIC_ACC, 0)

        def STATIC_ID(self):
            return self.getToken(D96Parser.STATIC_ID, 0)

        def SUB(self):
            return self.getToken(D96Parser.SUB, 0)

        def NOT(self):
            return self.getToken(D96Parser.NOT, 0)

        def MUL(self):
            return self.getToken(D96Parser.MUL, 0)

        def DIV(self):
            return self.getToken(D96Parser.DIV, 0)

        def PRCNT(self):
            return self.getToken(D96Parser.PRCNT, 0)

        def ADD(self):
            return self.getToken(D96Parser.ADD, 0)

        def AND(self):
            return self.getToken(D96Parser.AND, 0)
